# dj_sentry

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
dj_sentry/: __init__.py  apps.py
