[tool.poetry]
name = "dj-sentry"
version = "0.2.0"
description = "A Django app to initialize Sentry client for your Django applications"
authors = ["Michael Vieira <dev@mvieira.fr>"]
repository = "https://github.com/themimitoof/dj_sentry"
readme = "README.md"
keywords = ["django", "sentry"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.2"
django = ">=3.0,<5.0"
sentry-sdk = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
